--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,8 @@
 <resources>
-    <string name="app_name">Petter</string>
-    <string name="btn_l">Login</string>
-    <string name="hello_blank_fragment">Hello</string>
-    <string name="your_name">Nome</string>
-    <string name="login_form_title">Login</string>
-    <string name="login_form_username">Username</string>
-    <string name="login_form_password">Password</string>
-    <string name="login_form_login">LOGIN</string>
-    <string name="swipe_left_for_register">Scorri per accedere alla pagina di registrazione</string>
-    <string name="login">Login</string>
-    <string name="password">Password</string>
-    <string name="e_mail">Email</string>
-    <string name="tag">Inserisci email e password per accedere</string>
-    <string name="swipe_right_for_login">Scorri per accedere alla pagina di login</string>
-    <string name="register">Registrazione</string>
-    <string name="re_type_password">Ripeti Password</string>
+    <string name="app_name">LAIKA</string>
+    <string name="action_settings">Settings</string>
+    <string name="login_text">Inserire username e password per accedere</string>
+    <string name="redirect_create_text">Nuovo utente?</string>
+
+
 </resources>
