--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">LAIKA</string>
     <string name="action_settings">Settings</string>
-    <string name="login_text">Inserire username e password per accedere</string>
+    <string name="login_text">    Inserire username e password per accedere</string>
     <string name="redirect_create_text">Nuovo utente?</string>
     <string name="login_email_hint">Email</string>
     <string name="login_password_hint">Password</string>
@@ -18,7 +18,7 @@
     <string name="login">Login</string>
     <string name="password">Password</string>
     <string name="e_mail">Email</string>
-    <string name="tag">Inserisci username e password per accedere</string>
+    <string name="tag">    Inserici i tuoi dati per registrarti</string>
     <string name="swipe_right_for_login">Clicka per accedere alla pagina di login</string>
     <string name="register">Registrati</string>
     <string name="re_type_password">Ripeti Password</string>
